--- a/src/vsgXchangeConfig.cmake.in
+++ b/src/vsgXchangeConfig.cmake.in
@@ -3,4 +3,6 @@ include(CMakeFindDependencyMacro)
 find_dependency(Vulkan)
 find_dependency(vsg)
 
+set(VSGCONV_EXECUTABLE "@VSGCONV_EXECUTABLE@")
+
 include("${CMAKE_CURRENT_LIST_DIR}/vsgXchangeTargets.cmake")
